fixed too big player photos error in team page

--- a/src/main/webapp/static/css/team.css
+++ b/src/main/webapp/static/css/team.css
@@ -75,6 +75,7 @@
 
 .singlePlayer>img {
 	border-bottom: thin solid black;
+	width: 100%;
 }
 
 .trainButton {
